--- a/tsconfig.json
+++ b/tsconfig.json
@@ -102,7 +102,7 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "**/*.ts",
+    "src/",
   ],
   "exclude": [
     "node_modules"
